# gardenpi

./: .env  .gitignore  .prospector.yaml  Makefile  README.md  controllers.py  datalogger.py  gardenpi.service  main.py  mcp.py  mypy.ini  pyproject.toml  sensors.py
.github/workflows/: main.yml
controllers/: __init__.py  base_controller.py  fan_controller.py  heater_controller.py  vent_controller.py
sensors/: __init__.py  base_sensor.py  bme280.py  ds18b20.py  mcp_sensor.py
tests/: conftest.py  test_datalogger.py  test_heater_controller.py  test_main.py  test_mcp.py  test_sensors.py
tests/controllers/: idea.properties  test_fan_controller.py  test_heater_controller.py  test_vent_controller.py
tests/sensors/: test_bme280.py  test_ds18b20.py  test_mcp_sensor.py
