[tool.poetry]
name = "gardenpi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
adafruit-mcp3008 = { version = "^1.0.2", markers = "platform_machine == 'armv7l'"}
numpy = "1.19.0"
wiringpi = { version = "^2.60.0", markers = "platform_machine == 'armv7l'"}
simple_pid = "^0.2.4"
flask = "^1.1.2"
pigpio = {version = "^1.46", platform = "armv7l"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mypy = "^0.6.2"
mypy = "^0.782"
black = "^19.10b0"
prospector = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
